mos: Add initial C entrypoint
Signed-off-by: Ian Moffett <ian@osmora.org>

--- a/mos/sys/Makefile
+++ b/mos/sys/Makefile
@@ -10,7 +10,11 @@ SYS_CFLAGS =
 ARCH =
 
 .PHONY: all
-all: arch
+all: kern arch
+
+.PHONY: kern
+kern:
+	cd kern/; make CC=$(CC) LD=$(LD) SYS_CFLAGS="$(SYS_CFLAGS)"
 
 .PHONY: arch
 arch:
