mos/x86_64: Add UART driver + MU interface
Signed-off-by: Ian Moffett <ian@osmora.org>

--- a/mos/sys/arch/x86_64/Makefile
+++ b/mos/sys/arch/x86_64/Makefile
@@ -7,12 +7,16 @@ ASMFILES = $(shell find . -name "*.S")
 ASMOFILES = $(ASMFILES:.S=.S.o)
 MISC_OFILES = $(shell find ../../ -name "*.o")
 
+CFILES = $(shell find . -name "*.c")
+OFILES = $(CFILES:.c=.o)
+
 CC =
 LD =
 
 SYS_CFLAGS =
 CFLAGS =                    	\
-	-I ../../target/inc/		\
+	-I../../target/inc/			\
+	-I../../inc/				\
 	-I../../../../usr/sdk/inc/	\
 	$(SYS_CFLAGS)
 
@@ -20,8 +24,11 @@ LDFLAGS = -Tadmin/mos.lds
 MOS_OUT = ../../sys.mos
 
 .PHONY: all
-all: $(ASMOFILES)
+all: $(OFILES) $(ASMOFILES)
 	$(LD) $(LDFLAGS) $(MISC_OFILES) -o $(MOS_OUT)
+
+%.o: %.c
+	$(CC) $(CFLAGS) -c $< -o $@
 
 %.S.o: %.S
 	$(CC) $(CFLAGS) -c $< -o $@
