mos: Add boot protocol translation layer
The boot protocol translation layer treats all boot protocols as
intermediary and thus translates them to a standard MOS protocol.

Signed-off-by: Ian Moffett <ian@osmora.org>

--- a/mos/sys/kern/Makefile
+++ b/mos/sys/kern/Makefile
@@ -4,6 +4,7 @@
 #
 
 CFILES = $(shell find . -name "*.c")
+CFILES += $(shell find ../bpt -name "*.c")
 OFILES = $(CFILES:.c=.o)
 
 SYS_CFLAGS =
@@ -11,7 +12,9 @@ CFLAGS = 					\
 	$(SYS_CFLAGS) 			\
 	-I../../../usr/sdk/inc/ \
 	-I../inc/				\
-	-I../target/inc/
+	-I../target/inc/		\
+	-D_KERNEL				\
+	-D_BOOT_PROTO="\"$(BOOT_PROTO)\""
 
 .PHONY: all
 all: $(OFILES)
