--- a/mos/sys/kern/Makefile
+++ b/mos/sys/kern/Makefile
@@ -6,6 +6,7 @@
 CFILES = $(shell find . -name "*.c")
 CFILES += $(shell find ../bpt -name "*.c")
 CFILES += $(shell find ../mm -name "*.c")
+CFILES += $(shell find ../ob -name "*.c")
 OFILES = $(CFILES:.c=.o)
 
 SYS_CFLAGS =
